Added check for ticketPrices in event update